--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>たんぽぽと雪虫</title>
+<title>彼岸花とゴミ虫</title>
 <style>
   body {
     margin: 0;
     overflow: hidden;
-    background: linear-gradient(to top, #6b7b8c, #b9d3f0);
+    background: linear-gradient(270deg, #ffd6e0, #ffe0f7, #d6f0ff, #e0ffe8, #fff0d6);
+    background-size: 1200% 1200%;
+    animation: gradientShift 30s ease infinite;
+  }
+  @keyframes gradientShift {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
   }
   canvas {
     display: block;
@@ -44,38 +51,46 @@ function resize() {
 window.addEventListener("resize", resize);
 resize();
 
-// 雪虫（1000匹）
-const snowflies = Array.from({ length: 1000 }, () => ({
+// ゴミ虫（虹色トーン）
+const rainbowColors = [
+  "#c7d0ff", "#f7c7ff", "#ffd6e0", "#fff0d6", "#e0ffe8", "#d6f0ff"
+];
+const bugs = Array.from({ length: 1000 }, () => ({
   x: Math.random() * w,
   y: Math.random() * h,
-  r: Math.random() * 2 + 1,
-  speed: Math.random() * 0.5 + 0.2,
-  glow: Math.random() < 0.3
+  r: Math.random() * 2 + 1.5,
+  speed: Math.random() * 0.6 + 0.2,
+  color: rainbowColors[Math.floor(Math.random() * rainbowColors.length)],
+  phase: Math.random() * Math.PI * 2
 }));
 
-// たんぽぽ
-function drawDandelion() {
+// 彼岸花
+function drawSpiderLily() {
   const cx = w / 2, cy = h - 80;
   ctx.save();
   ctx.translate(cx, cy);
-  ctx.strokeStyle = "#2e8b57";
+  ctx.strokeStyle = "#3a1818";
   ctx.lineWidth = 4;
   ctx.beginPath();
   ctx.moveTo(0, 0);
   ctx.lineTo(0, -120);
   ctx.stroke();
+
   for (let i = 0; i < 40; i++) {
     const angle = (i / 40) * Math.PI * 2;
-    const x = Math.cos(angle) * 40;
-    const y = -120 + Math.sin(angle) * 40;
+    const x = Math.cos(angle) * 50;
+    const y = -120 + Math.sin(angle) * 50;
     ctx.beginPath();
     ctx.moveTo(0, -120);
     ctx.lineTo(x, y);
-    ctx.strokeStyle = "rgba(255,255,0,0.8)";
-    ctx.lineWidth = 1;
+    ctx.strokeStyle = "rgba(255,0,0,0.75)";
+    ctx.lineWidth = 2;
+    ctx.shadowBlur = 12;
+    ctx.shadowColor = "rgba(255,60,60,0.9)";
     ctx.stroke();
   }
   ctx.restore();
+  ctx.shadowBlur = 0;
 }
 
 // 顔文字の出現
@@ -88,7 +103,7 @@ function showFace(faceId) {
 // クリック判定
 canvas.addEventListener("click", e => {
   const mx = e.clientX, my = e.clientY;
-  snowflies.forEach((s, i) => {
+  bugs.forEach((s, i) => {
     const dx = s.x - mx, dy = s.y - my;
     if (dx * dx + dy * dy < 50 && i % 100 === 0) {
       showFace(Math.random() < 0.5 ? "face1" : "face2");
@@ -98,19 +113,14 @@ canvas.addEventListener("click", e => {
 
 function animate() {
   ctx.clearRect(0, 0, w, h);
-  drawDandelion();
-  snowflies.forEach(s => {
+  drawSpiderLily();
+  bugs.forEach(s => {
     s.y += s.speed;
-    s.x += Math.sin(s.y / 20) * 0.3;
+    s.x += Math.sin(s.y / 20 + s.phase) * 0.4;
     if (s.y > h) s.y = -10;
-    if (s.glow) {
-      ctx.fillStyle = "rgba(255,255,255,0.8)";
-      ctx.shadowBlur = 8;
-      ctx.shadowColor = "white";
-    } else {
-      ctx.fillStyle = "rgba(255,255,255,0.5)";
-      ctx.shadowBlur = 0;
-    }
+    ctx.fillStyle = s.color;
+    ctx.shadowBlur = 6;
+    ctx.shadowColor = s.color;
     ctx.beginPath();
     ctx.arc(s.x, s.y, s.r, 0, Math.PI * 2);
     ctx.fill();
